fix overflow mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,18 +17,21 @@
 
 *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 
-html { scroll-behavior: smooth; }
+html { scroll-behavior: smooth; 
+       scroll-behavior: smooth;
+       overflow-x: hidden; }
 img, video, iframe {
   max-width: 100%;
   height: auto;
   display: block; /* Elimina espacios en blanco no deseados debajo */
 }
 body {
+  overflow-x: hidden;
+  max-width: 100vw;
   font-family: 'DM Sans', sans-serif;
   color: var(--dark);
   background: var(--white);
   line-height: 1.6;
-  overflow-x: hidden;
 }
 
 
